@@ -25,6 +25,11 @@ Platform 1.27
   - TestServer no longer uses resource files to supply JSON.
   - The sample server no longer uses events
 
+* HttpServer
+
+  We created TestingAdminHttpServer and TestingAdminHttpServerModule for
+  testing of admin port resources.
+
 * [Bug] Fix connection hang when ResponseHandler throws without reading large
   response.
 
